--- a/cgi/src/index.html
+++ b/cgi/src/index.html
@@ -4,6 +4,6 @@
 </head>
 <!-- We do not use this homepage -->
 <script language="javascript" type="text/javascript">
-  window.location.href="/cgi-bin/cgiprog2"; 
+  window.location.href="/cgi-bin/xpadCGI"; 
 </script>
-<a href="/cgi-bin/cgiprog2">Click here</a>if the page has not redirected
+<a href="/cgi-bin/xpadCGI">Click here</a>if the page has not redirected
